8300543: Compiler Implementation for Pattern Matching for switch 8300545: Compiler Implementation for Record Patterns
Co-authored-by: Aggelos Biboudis <abimpoudis@openjdk.org>
Reviewed-by: vromero, mcimadamore